--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Project Setup</h1>
+    <header>
+      <nav>
+        <ul>
+          <li>About</li>
+          <li>Experience</li>
+          <li>Projects</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <div class="portfolio-header">
+        <div class="container">
+          <h1>Shane Corless</h1>
+          <h2>Technical Support Engineer</h2>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
